# mcp-remote

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/mcp_gitlab/: __init__.py  cloud.py  gitlab_client.py  server.py
src/mcp_gitlab/tools/: __init__.py  groups.py  issues.py  merge_requests.py  pipelines.py  projects.py
